--- a/css/common.css
+++ b/css/common.css
@@ -3,3 +3,42 @@ body{
     width: 100%;
     background-image: url(../img/e.jpg);
 }
+/*body footer{
+    background-image: url(../img/a%20(12).jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position-x: center;*/
+    
+}
+.wrapper .header{
+    border: 1px solid gray;
+    padding: 100%;
+    height: 25px;
+}
+.wrapper .header .logo{
+    font-size: 35px;/*字体大小*/
+    background-color: dimgrey;/*背景颜色*/
+    color: beige;/*字体颜色*/
+    padding: 10px;/*填充*/
+    font-weight: bolder;/*字体粗细*/
+}
+.header .nav{  /*展示栏*/
+    background-color: darkolivegreen;
+    overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
+    scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
+    
+}
+
+.header .nav a{/*展示栏其他项目*/
+    background-color:darkolivegreen;
+    font-size: 25px;
+    color: white;
+    padding: 10px;
+    float: left;/*会使元素向左浮动*/
+    text-decoration: none;/*取消下划线*/
+    width: 160px;
+    text-align: center;
+}
+.header .nav a:hover{/*鼠标移动到展示栏各项，会变成橘色*/
+    background-color: orange;
+}
