--- a/css/main4.css
+++ b/css/main4.css
@@ -1,83 +1,81 @@
-
-#wrapper .header h2{
-    border: 2px solid beige;
+.wrapper .main h2 {
+	 border: 2px solid beige;
     font-size: 30px;
     background-color: gray;
     color: white;
-    padding-left: 10px;
+	height:40px;
+	padding-left:10px;
 }
-#wrapper .header pane{
-    border: 1px solid gray;/*制作一个框架*/
-    background-color:beige ;/*框架内背景颜色*/
-    text-indent: 60px;/*缩进*/
-    padding-top: 100px;/*填充上*/
-    padding-bottom: 100px;/*填充下*/
-}
-.header .pane img{/*简历照片*/
-     float: just;/*浮动向左*/
-     width:90%;/*宽*/
-     height: 600px;/*高*/
+
+.main .pane h3{/*自我介绍文字*/
+     border:2px  solid beige;
      overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
     scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
-     padding-right:60px ;/*填充右*/
-     padding-left: 60px;/*填充左*/
-     object-fit: cover;
-}
-.header .pane2 img{
-    width: 400;
-    height: 600px;
-    border: 1px solid outset;
-    padding-top: 20px;
-}
-.header .pane h3{/*自我介绍文字*/
-     border: 1px solid outset;
-     overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
-    scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
-     text-align: left;
-     line-height: 35px;/*行高*/
+     text-indent:40px;
+     line-height: 40px;/*行高*/
      font-size: large;/*字体大小*/
-     padding-left: 30px;
-     padding-right: 30px;
+	 padding-left:30px;
+	 padding-right:30px;
 }
-#wrapper .main pane1{
-    border: 1px solid gray;
-    background-color:orangered ;/*框架内背景颜色*/
+.main .pane img{
+	width:95%;
+	height:20%;
+	 border: 2px solid beige;
+	 overflow:auto;
+	 padding-left:45px;
+}
+.wrapper .main pane1{
+    border: 1px solid rad;/*制作一个框架*/
+    display: inline-block;/*将对象呈递为内联对象，旁边的内联对象会被呈递在同一行内*/
+    background-color:beige ;/*框架内背景颜色*/
     text-indent: 60px;/*缩进*/
     padding-top: 100px;/*填充上*/
     padding-bottom: 100px;/*填充下*/
 }
 .main .pane1 img{/*简历照片*/
      float: left;/*浮动向左*/
-     width: 400px;/*宽*/
+     width: 450px;/*宽*/
      height: 300px;/*高*/
      overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
     scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
      padding-right:50px ;/*填充右*/
      padding-left: 60px;/*填充左*/
-    
 }
 .main .pane1 h3{/*自我介绍文字*/
      overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
     scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
      padding-right: 60px;/*填充右*/
-     line-height: 35px;/*行高*/
+     line-height: 40px;/*行高*/
      font-size: large;/*字体大小*/
-     padding-bottom: 130px;
+	 height:350px;
 }
-#wrapper .footer embed{
-    border: 1px solid outset;
-    overflow: auto;
-    padding-left: 350px;
+.wrapper .footer h2 {
+	 border: 2px solid beige;
+    font-size: 30px;
+    background-color: gray;
+    color: white;
+	height:40px;
+	padding-left:10px;
 }
-#wrapper .footer img{
-    border: 1px solid #FFFFFF;
-    padding-left: 60px;
-    padding-right: 20px;
-    padding-top: 5px;
+.pane2 h3{
+	 border: 2px solid beige;
+    background-color: gray;
+    color: white;
+	height:30px;
+	padding-left:10px;
 }
-#wrapper .footer h3{
-    border: 1px solid #FFFFFF;
-    padding-left: 60px;
-    padding-right: 100px;
-    background-color: #696969;
+.pane2 img{
+	border: 10px solid gray;/*制作一个框架*/
+    display: inline-block;/*将对象呈递为内联对象，旁边的内联对象会被呈递在同一行内*/
+    background-color:beige ;/*框架内背景颜色*/
+    height:500px;
+	width:400px;
+	padding-left:30px
 }
+.pane2 embed{
+	border: 10px solid gray;/*制作一个框架*/
+    background-color:beige ;/*框架内背景颜色*/
+	padding-left:30px;
+}
+
+
