--- a/css/main4.css
+++ b/css/main4.css
@@ -18,11 +18,12 @@
 	 padding-right:30px;
 }
 .main .pane img{
-	width:95%;
+	width:100%;
 	height:20%;
 	 border: 2px solid beige;
 	 overflow:auto;
 	 padding-left:45px;
+	 padding-right:45px;
 }
 .wrapper .main pane1{
     border: 1px solid rad;/*制作一个框架*/
