--- a/css/main3.css
+++ b/css/main3.css
@@ -18,7 +18,7 @@
      overflow:auto ;
      width: 380px;/*宽*/
      height: 260px;/*高*/
-     
+     margin-left:30px
 }
 .pane1 h3{
 	 border: 2px solid beige;
