--- a/css/main4.css
+++ b/css/main4.css
@@ -85,7 +85,7 @@ bady{
 	border: 10px solid gray;/*制作一个框架*/
     background-color:beige ;/*框架内背景颜色*/
 	margin-left:60px;
-	
+	margin-right:60px;
 }
 
 
