--- a/css/main4.css
+++ b/css/main4.css
@@ -35,7 +35,8 @@ body{
     padding-left: 10px;
 }
 .wrapper .main pane1{
-    border: 1px solid gray;/*制作一个框架*/
+    border: 1px solid red;/*制作一个框架*/
+	height:410px;
     display: inline-block;/*将对象呈递为内联对象，旁边的内联对象会被呈递在同一行内*/
     background-color:beige ;/*框架内背景颜色*/
     text-indent: 60px;/*缩进*/
@@ -44,14 +45,16 @@ body{
 }
 .main .pane1 img{/*简历照片*/
      float: left;/*浮动向左*/
-     width: 200px;/*宽*/
-     height: 200px;/*高*/
+     width: 500px;/*宽*/
+     height: 400px;/*高*/
      overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
     scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
      padding-right:50px ;/*填充右*/
      padding-left: 60px;/*填充左*/
 }
 .main .pane1 h3{/*自我介绍文字*/
+     border:2px soild beige;
+	 height:410px;
      overflow: auto;/*如果它溢出了元素的内容区，来判断左右边缘是否裁剪，visible，不裁剪内容科能会显示在内容框之外。hidden，裁剪内容-不提供滚动机制。
     scroll，裁剪内容提供滚动机制。auto，如果溢出框则应该提供滚动机制。no-display,如果内容不适合内容框则删除整个框。*/
      padding-right: 60px;/*填充右*/
@@ -63,6 +66,7 @@ body{
     background-color: gray;
     color: white;
     padding-left: 10px;
+	padding-top:20px;
 }
 .wrapper .main .pane2 h3{
 	border: 2px solid beige;
@@ -81,7 +85,7 @@ body{
 	border: 10px solid #FFFFFF;
      overflow:auto ;
      width: 1040px;/*宽*/
-     height: 500px;/*高*/
+     height: 600px;/*高*/
      margin-left:100px;
 }
 
