--- a/css/main4.css
+++ b/css/main4.css
@@ -84,8 +84,8 @@ body{
 .wrapper .main .pane2 embed{
 	border: 10px solid #FFFFFF;
      overflow:auto ;
-     width: 1040px;/*宽*/
-     height: 600px;/*高*/
+     width: 60%;/*宽*/
+     height: 15%px;/*高*/
      margin-left:60px;
 }
 
