--- a/css/main4.css
+++ b/css/main4.css
@@ -26,6 +26,7 @@ body{
 	width:80%;
 	height:10%;
 	padding-left:150px;
+	padding-right:150px;
 }
 .wrapper .main .name2 h2{
 	border: 2px solid beige;
