--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     width: 100%;
-    background-image: url(../img/e.jpg);
+    <script src="http://s4.cnzz.com/stat.php?id=300636&web_id=300636" language="JavaScript"></script>
 }
 /*body footer{
     background-image: url(../img/a%20(12).jpg);
